# fastapi_zero

./: LICENSE  compose.yaml  dockerfile  pyproject.toml
.github/workflows/: pipeline.yml
migrations/: env.py
migrations/versions/: 8bd3188fe980_create_user_table.py  95a740f963ff_create_user_table.py  e95fe3c112bd_initial.py  f4380449075c_add_todos_table.py
src/fastapi_zero/: app.py  database.py  models.py  schemas.py  security.py
src/fastapi_zero/routers/: auth.py  todo.py  user.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_to_do.py  test_user.py  teste_security.py
