[project]
name = "fastapi-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "EdivarCr",email = "edivarfilho16@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14, <4.0"
dependencies = [
    "fastapi[standard] (>=0.128.5,<0.129.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)"
]

[tool.poetry]
packages = [{include = "fastapi_zero", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.0,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]


[tool.ruff]
line-length = 88
extend-exclude = ['migrations']


[tool.ruff.lint]
preview = true
select = [
    "I", "F", "E", "W", "PL", "PT"
]

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "-p no:warnings"

[tool.taskipy.tasks]
run = "fastapi dev src/fastapi_zero/app.py"
pre_test = "task lint"
test = "pytest -s -x --cov=fastapi_zero -vv"
post_test = "coverage html"
lint = "ruff check . && ruff check . --diff"
format = "ruff check . --fix && ruff format ."